--- a/lib/elixir_gist_web/components/layouts/app.html.heex
+++ b/lib/elixir_gist_web/components/layouts/app.html.heex
@@ -26,9 +26,10 @@
   </div>
   <div class="relative ">
     <button id="user-menu-button" class="flex items-center">
+      <!-- w-auto rounded-full border-white border-solid border-2 -->
       <img
         src={~p"/images/profile_picture.jpg"}
-        class="w-8 h-8 w-auto rounded-full border-white border-solid border-2"
+        class="w-8 h-8 round-image-padding "
         alt="profile image"
       />
       <img
